Some initial renaming for Cheetah.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13630 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties.pot
+++ b/application/src/main/resources/messages.properties.pot
@@ -15,11 +15,11 @@ msgstr ""
 "X-Accelerator-Marker: &\n"
 
 #: title
-msgid "SpringApp"
+msgid "Mifos"
 msgstr ""
 
 #: heading
-msgid "Hello :: SpringApp"
+msgid "Hello :: Mifos"
 msgstr ""
 
 #: greeting
@@ -27,7 +27,7 @@ msgid "Greetings, it is now"
 msgstr ""
 
 #: priceincrease.heading
-msgid "Price Increase :: SpringApp"
+msgid "Price Increase :: Mifos"
 msgstr ""
 
 #: error.not-specified
