--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,7 +1,7 @@
-title=@@@SpringApp###
-heading=@@@Hello :: SpringApp###
+title=@@@Mifos###
+heading=@@@Hello :: Mifos###
 greeting=@@@Greetings, it is now###
-priceincrease.heading=@@@Price Increase :: SpringApp###
+priceincrease.heading=@@@Price Increase :: Mifos###
 error.not-specified=@@@Percentage not specified!###
 error.too-low=@@@You have to specify a percentage higher than {0}!###
 error.too-high=@@@Don''t be greedy - you can''t raise prices by more than {0}%!###
