Work in progress on Default user login story. * Added header with css based nav-bar for home page. * Added acceptance test stories in DefaultAdminUserCanLoginStoryTest (not yet passing).
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13659 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,5 +1,5 @@
 title=@@@Mifos###
-heading=@@@Hello :: Mifos###
+welcomeToMifos=@@@Hello :: Mifos###
 greeting=@@@Greetings, it is now###
 priceincrease.heading=@@@Price Increase :: Mifos###
 error.not-specified=@@@Percentage not specified!###
