--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 title=Mifos
-heading=Hello :: Mifos
+welcomeToMifos=Welcome to Mifos
 greeting=Greetings, it is now
 priceincrease.heading=Price Increase :: Mifos
 error.not-specified=Percentage not specified!
