marked DefaultAdminUserCanLoginStoryTest workInProgress; added application info page for svn revision and build tag
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13662 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -20,3 +20,4 @@ frenchText=frenchTextGoesHere
 accessDeniedTitle=Access Denied
 accessDeniedHeading=Access Denied
 accessDeniedMessage=You are not allowed to access this page.
+systemInformation=System Information
