appInfo controller test; made appInfo labels into translatable text
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13671 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -21,3 +21,6 @@ accessDeniedTitle=Access Denied
 accessDeniedHeading=Access Denied
 accessDeniedMessage=You are not allowed to access this page.
 systemInformation=System Information
+svnRevision=SVN revision number
+buildId=Build ID
+buildTag=Build tag
