--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -1,5 +1,9 @@
 title=Mifos
 welcomeToMifos=Welcome to Mifos
+tab.Home=Home
+tab.ClientsAndAccounts=Clients & Accounts
+tab.Reports=Reports
+tab.Admin=Admin
 greeting=Greetings, it is now
 priceincrease.heading=Price Increase :: Mifos
 error.not-specified=Percentage not specified!
