ftl changes - tab titles now use messages rather than hardcoded strings; added clientsAndAccounts.ftl home page with left pane; added css for left pane
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13684 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -28,3 +28,4 @@ systemInformation=System Information
 svnRevision=SVN revision number
 buildId=Build ID
 buildTag=Build tag
+clientsAndAccounts.title=Clients & Accounts
