initial check in for story 683 - create client; only stubs and test stubs.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13695 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -29,3 +29,7 @@ svnRevision=SVN revision number
 buildId=Build ID
 buildTag=Build tag
 clientsAndAccounts.title=Clients & Accounts
+createClient=Create client
+firstName=First name
+lastName=Last name
+dateOfBirth=Date of birth
