Partially completed acceptance tests for story 679 -- create Loan Product. Cleaned up style and formatting of admin home and create-loan-product pages to conform to existing Mifos style. Revised error messages to conform to acceptance tests for story 679.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13809 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -33,3 +33,5 @@ createClient=Create client
 firstName=First name
 lastName=Last name
 dateOfBirth=Date of birth
+loanProductStatus.ACTIVE=Active
+loanProductStatus.INACTIVE=Inactive
