Extracted strings to prop files for the home page left sidebar. Did a quick first pass at an automatic pseudolocalization generator.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13833 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,20 +1,43 @@
-title=@@@Mifos###
-welcomeToMifos=@@@Hello :: Mifos###
-greeting=@@@Greetings, it is now###
-priceincrease.heading=@@@Price Increase :: Mifos###
-error.not-specified=@@@Percentage not specified!###
-error.too-low=@@@You have to specify a percentage higher than {0}!###
-error.too-high=@@@Don''t be greedy - you can''t raise prices by more than {0}%!###
-required=@@@Entry required.###
-typeMismatch=@@@Invalid data.###
-typeMismatch.percentage=@@@That is not a number!###
-ID=@@@ID###
-Description=@@@Description###
-Price=@@@Price###
-UserName=@@@UserName###
-Products=@@@Products###
-chineseText=\t\u95EE\u5019\u5927\u5BB6
-arabicText=\u062A\u062D\u064A\u0627\u062A\u064A \u0644\u0644\u062C\u0645\u064A\u0639
-hindiText=\t\u0905\u092D\u093F\u0935\u093E\u0926\u0928 \u0915\u0930\u0928\u0947 \u0915\u0947 \u0932\u093F\u090F \u0939\u0930 \u0915\u094B\u0908
-frenchText=Salutations \u00E0 tout le monde
-
+#---Auto Generated Properties---
+#Wed Sep 24 22:19:22 PDT 2008
+UserName=@@@UserName\#\#\#
+arabicText=@@@arabicTextGoesHere\#\#\#
+createClient=@@@Create client\#\#\#
+hindiText=@@@hindiTextGoesHere\#\#\#
+accessDeniedHeading=@@@Access Denied\#\#\#
+svnRevision=@@@SVN revision number\#\#\#
+createNewClient=@@@Create new Client\#\#\#
+loanProductStatus.INACTIVE=@@@Inactive\#\#\#
+tab.Reports=@@@Reports\#\#\#
+buildTag=@@@Build tag\#\#\#
+loanProductStatus.ACTIVE=@@@Active\#\#\#
+tab.Admin=@@@Admin\#\#\#
+quickStart=@@@Quick Start\#\#\#
+openNewLoanAccount=@@@Open new Loan Account\#\#\#
+Description=@@@Description\#\#\#
+tab.ClientsAndAccounts=@@@Clients & Accounts\#\#\#
+greeting=@@@Greetings, it is now\#\#\#
+systemInformation=@@@System Information\#\#\#
+required=@@@Entry required.\#\#\#
+Price=@@@Price\#\#\#
+tab.Home=@@@Home\#\#\#
+accessDeniedTitle=@@@Access Denied\#\#\#
+typeMismatch=@@@Invalid data.\#\#\#
+manageClients=@@@Manage Clients\#\#\#
+lastName=@@@Last name\#\#\#
+ID=@@@ID\#\#\#
+chineseText=@@@chineseTextGoesHere\#\#\#
+accessDeniedMessage=@@@You are not allowed to access this page.\#\#\#
+title=@@@Mifos\#\#\#
+typeMismatch.percentage=@@@That is not a number\!\#\#\#
+welcomeToMifos=@@@Welcome to Mifos\#\#\#
+firstName=@@@First name\#\#\#
+clientsAndAccounts.title=@@@Clients & Accounts\#\#\#
+buildId=@@@Build ID\#\#\#
+manageAccounts=@@@Manage Accounts\#\#\#
+dateOfBirth=@@@Date of birth\#\#\#
+priceincrease.heading=@@@Price Increase \:\: Mifos\#\#\#
+createNewGroup=@@@Create new Group\#\#\#
+frenchText=@@@frenchTextGoesHere\#\#\#
+Products=@@@Products\#\#\#
+error.not-specified=@@@Percentage not specified\!\#\#\#
