--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -7,8 +7,6 @@ tab.Admin=Admin
 greeting=Greetings, it is now
 priceincrease.heading=Price Increase :: Mifos
 error.not-specified=Percentage not specified!
-error.too-low=You have to specify a percentage higher than {0}!
-error.too-high=Don''t be greedy - you can''t raise prices by more than {0}%!
 required=Entry required.
 typeMismatch=Invalid data.
 typeMismatch.percentage=That is not a number!
@@ -35,3 +33,9 @@ lastName=Last name
 dateOfBirth=Date of birth
 loanProductStatus.ACTIVE=Active
 loanProductStatus.INACTIVE=Inactive
+quickStart=Quick Start
+manageClients=Manage Clients
+createNewGroup=Create new Group
+createNewClient=Create new Client
+manageAccounts=Manage Accounts
+openNewLoanAccount=Open new Loan Account
