--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -38,3 +38,4 @@ createNewGroup=Create new Group
 createNewClient=Create new Client
 manageAccounts=Manage Accounts
 openNewLoanAccount=Open new Loan Account
+createClientSuccess.clientCreatedSuccessfully=Client created successfully!
