Adding an admin sidebar to the admin page and using it for operations on the admin page.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13845 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -38,4 +38,6 @@ createNewGroup=Create new Group
 createNewClient=Create new Client
 manageAccounts=Manage Accounts
 openNewLoanAccount=Open new Loan Account
+administrativeTasks=Administrative Tasks
 createClientSuccess.clientCreatedSuccessfully=Client created successfully!
+
