DatabaseTestUtils can now clear tables programmatically; updated LocalDateEditor to understand Locales. Some code duplication between DatabaseTestUtils and AcceptanceTestUtils.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13856 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -29,7 +29,7 @@ clientsAndAccounts.title=Clients & Accounts
 createClient=Create client
 firstName=First name
 lastName=Last name
-dateOfBirth=Date of birth [yyyy-mm-dd]
+dateOfBirth=Date of birth
 loanProductStatus.ACTIVE=Active
 loanProductStatus.INACTIVE=Inactive
 quickStart=Quick Start
