Added loan disbursal date display to loanDetails page. Updated createClient.ftl to get correct input box alignment on Windows. Some quick string i18n.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13886 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -40,4 +40,8 @@ manageAccounts=Manage Accounts
 openNewLoanAccount=Open new Loan Account
 administrativeTasks=Administrative Tasks
 createClientSuccess.clientCreatedSuccessfully=Client created successfully!
-
+yourSettings=Your settings
+logout=Logout
+toQuicklyFindAClientYouCan=To quickly find a client you can...
+searchByName=Search by name:
+search=Search
