--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,5 +1,5 @@
 #---Auto Generated Properties---
-#Wed Sep 24 22:19:22 PDT 2008
+#Thu Oct 02 14:03:32 PDT 2008
 UserName=@@@UserName\#\#\#
 arabicText=@@@arabicTextGoesHere\#\#\#
 createClient=@@@Create client\#\#\#
@@ -11,6 +11,7 @@ loanProductStatus.INACTIVE=@@@Inactive\#\#\#
 tab.Reports=@@@Reports\#\#\#
 buildTag=@@@Build tag\#\#\#
 loanProductStatus.ACTIVE=@@@Active\#\#\#
+createClientSuccess.clientCreatedSuccessfully=@@@Client created successfully\!\#\#\#
 tab.Admin=@@@Admin\#\#\#
 quickStart=@@@Quick Start\#\#\#
 openNewLoanAccount=@@@Open new Loan Account\#\#\#
@@ -21,6 +22,7 @@ systemInformation=@@@System Information\#\#\#
 required=@@@Entry required.\#\#\#
 Price=@@@Price\#\#\#
 tab.Home=@@@Home\#\#\#
+logout=@@@Logout\#\#\#
 accessDeniedTitle=@@@Access Denied\#\#\#
 typeMismatch=@@@Invalid data.\#\#\#
 manageClients=@@@Manage Clients\#\#\#
@@ -34,8 +36,13 @@ welcomeToMifos=@@@Welcome to Mifos\#\#\#
 firstName=@@@First name\#\#\#
 clientsAndAccounts.title=@@@Clients & Accounts\#\#\#
 buildId=@@@Build ID\#\#\#
+toQuicklyFindAClientYouCan=@@@To quickly find a client you can...\#\#\#
 manageAccounts=@@@Manage Accounts\#\#\#
 dateOfBirth=@@@Date of birth\#\#\#
+searchByName=@@@Search by name\:\#\#\#
+search=@@@Search\#\#\#
+yourSettings=@@@Your settings\#\#\#
+administrativeTasks=@@@Administrative Tasks\#\#\#
 createNewGroup=@@@Create new Group\#\#\#
 frenchText=@@@frenchTextGoesHere\#\#\#
 Products=@@@Products\#\#\#
