Hooked up disburse loan UI (added disburseLoan.ftl page and DisburseLoanController).
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13891 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -45,3 +45,6 @@ logout=Logout
 toQuicklyFindAClientYouCan=To quickly find a client you can...
 searchByName=Search by name:
 search=Search
+submit=Submit
+create=Create
+disbursalDate=Disbursal Date:
