added deleteLoanProduct pages; fixed acceptance tests broken by id tag changes; removed unused log statements; added Eclipse validation exclude for testFramework/target
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13901 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -48,3 +48,7 @@ search=Search
 submit=Submit
 create=Create
 disbursalDate=Disbursal Date:
+deleteLoanProduct=Delete loan product
+deleteLoanProductAreYouSure=Are you sure you want to delete loan product
+delete=Delete
+cancel=Cancel
