1. Added acceptance tests to verify that access to loan products functions is restricted to administrators. 2. Refactored acceptance tests to eliminate code duplication 3. Started localizing text in loan products pages.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13904 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -52,3 +52,4 @@ deleteLoanProduct=Delete loan product
 deleteLoanProductAreYouSure=Are you sure you want to delete loan product
 delete=Delete
 cancel=Cancel
+viewLoanProductsNoneDefined=No loan products have been defined
