1. Added comment to loan product pages that identify the page name. 2. Localized text in loan product pages.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13906 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -52,4 +52,17 @@ deleteLoanProduct=Delete loan product
 deleteLoanProductAreYouSure=Are you sure you want to delete loan product
 delete=Delete
 cancel=Cancel
-viewLoanProductsNoneDefined=No loan products have been defined
+loanProducts.view.heading=Loan Products
+loanProducts.view.noneDefined=No loan products have been defined.
+loanProducts.view.tableHeading.shortName=Short Name
+loanProducts.view.tableHeading.longName=Long Name
+loanProduct.view.heading=Details for loan product "{0}".
+loanProduct.edit.heading=Update loan product "{0}"
+loanProduct.edit.success.heading=Loan product "{0}" was successfully updated.
+loanProduct.create.heading=Create a new loan product
+loanProduct.create.success.heading=Loan product "{0}" was successfully defined.
+loanProduct.longName.description=Long name
+loanProduct.shortName.description=Short name
+loanProduct.maxInterestRate.description=Minimum interest rate
+loanProduct.minInterestRate.description=Maximum interest rate
+loanProduct.status.description=Status
