updates to AdminUserCanDeleteLoanProductStory: corrected logic, made verifyPage method; updated CreateClientPage to have similar verifyPage
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13911 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -26,7 +26,7 @@ svnRevision=SVN revision number
 buildId=Build ID
 buildTag=Build tag
 clientsAndAccounts.title=Clients & Accounts
-createClient=Create client
+createClient.title=Create Client
 firstName=First name
 lastName=Last name
 dateOfBirth=Date of birth
@@ -66,3 +66,4 @@ loanProduct.shortName.description=Short name
 loanProduct.maxInterestRate.description=Minimum interest rate
 loanProduct.minInterestRate.description=Maximum interest rate
 loanProduct.status.description=Status
+deleteLoanProduct.title=Delete Loan Product
