Partial progress on Story 662 - Admin User can create new user.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13940 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -67,3 +67,8 @@ loanProduct.maxInterestRate.description=Minimum interest rate
 loanProduct.minInterestRate.description=Maximum interest rate
 loanProduct.status.description=Status
 deleteLoanProduct.title=Delete Loan Product
+user.create.title=Create New User
+user.create.heading=Create a new user
+user.userId=User id
+user.password=Password
+user.confirmPassword=Confirm password
