hookup of delete functionality; corrected some messages for createLoanProduct
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13949 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -48,8 +48,8 @@ search=Search
 submit=Submit
 create=Create
 disbursalDate=Disbursal Date:
-deleteLoanProduct=Delete loan product
-deleteLoanProductAreYouSure=Are you sure you want to delete loan product
+deleteLoanProduct.title=Delete Loan Product
+deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
 delete=Delete
 cancel=Cancel
 loanProducts.view.heading=Loan Products
@@ -63,10 +63,9 @@ loanProduct.create.heading=Create a new loan product
 loanProduct.create.success.heading=Loan product "{0}" was successfully defined.
 loanProduct.longName.description=Long name
 loanProduct.shortName.description=Short name
-loanProduct.maxInterestRate.description=Minimum interest rate
-loanProduct.minInterestRate.description=Maximum interest rate
+loanProduct.maxInterestRate.description=Maxmimum interest rate
+loanProduct.minInterestRate.description=Minimum interest rate
 loanProduct.status.description=Status
-deleteLoanProduct.title=Delete Loan Product
 user.create.title=Create New User
 user.create.heading=Create a new user
 user.userId=User id
