--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -50,6 +50,8 @@ create=Create
 disbursalDate=Disbursal Date:
 deleteLoanProduct.title=Delete Loan Product
 deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
+deleteLoanProduct.couldNotDelete=Could not delete loan product
+deleteLoanProduct.becauseLoansExist=because there are loans that use this product.
 delete=Delete
 cancel=Cancel
 loanProducts.view.heading=Loan Products
