fixed problem with pom.xml and process-resources that resulted in a database called '$'; deleteLoanProduct now works for several acceptance test cases.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13966 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -52,6 +52,7 @@ deleteLoanProduct.title=Delete Loan Product
 deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
 deleteLoanProduct.couldNotDelete=Could not delete loan product
 deleteLoanProduct.becauseLoansExist=because there are loans that use this product.
+deleteLoanProduct.successfullyDeleted=Successfully deleted loan product
 delete=Delete
 cancel=Cancel
 loanProducts.view.heading=Loan Products
