Cleaned up some acceptance tests to use ids for for text comparison. Removed some unused imports. Internationalized some text and updated pseudo-localization strings.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13969 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -47,7 +47,7 @@ searchByName=Search by name:
 search=Search
 submit=Submit
 create=Create
-disbursalDate=Disbursal Date:
+disbursalDate=Disbursal Date
 deleteLoanProduct.title=Delete Loan Product
 deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
 deleteLoanProduct.couldNotDelete=Could not delete loan product
@@ -74,3 +74,12 @@ user.create.heading=Create a new user
 user.userId=User id
 user.password=Password
 user.confirmPassword=Confirm password
+createANewLoan=Create a new loan
+loanDetails=Loan Details
+client=Client
+loanProduct=Loan Product
+amount=Amount
+interestRate=Interest rate
+loanAmount=Loan Amount
+disburseLoan=Disburse Loan
+
