--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,49 +1,86 @@
 #---Auto Generated Properties---
-#Thu Oct 02 14:03:32 PDT 2008
-UserName=@@@UserName\#\#\#
-arabicText=@@@arabicTextGoesHere\#\#\#
-createClient=@@@Create client\#\#\#
-hindiText=@@@hindiTextGoesHere\#\#\#
-accessDeniedHeading=@@@Access Denied\#\#\#
-svnRevision=@@@SVN revision number\#\#\#
-createNewClient=@@@Create new Client\#\#\#
-loanProductStatus.INACTIVE=@@@Inactive\#\#\#
-tab.Reports=@@@Reports\#\#\#
-buildTag=@@@Build tag\#\#\#
-loanProductStatus.ACTIVE=@@@Active\#\#\#
-createClientSuccess.clientCreatedSuccessfully=@@@Client created successfully\!\#\#\#
-tab.Admin=@@@Admin\#\#\#
-quickStart=@@@Quick Start\#\#\#
-openNewLoanAccount=@@@Open new Loan Account\#\#\#
-Description=@@@Description\#\#\#
-tab.ClientsAndAccounts=@@@Clients & Accounts\#\#\#
-greeting=@@@Greetings, it is now\#\#\#
-systemInformation=@@@System Information\#\#\#
-required=@@@Entry required.\#\#\#
-Price=@@@Price\#\#\#
-tab.Home=@@@Home\#\#\#
-logout=@@@Logout\#\#\#
-accessDeniedTitle=@@@Access Denied\#\#\#
+#Fri Oct 17 17:20:21 PDT 2008
+loanProduct.edit.heading=@@@Update loan product "{0}"\#\#\#
 typeMismatch=@@@Invalid data.\#\#\#
-manageClients=@@@Manage Clients\#\#\#
-lastName=@@@Last name\#\#\#
-ID=@@@ID\#\#\#
-chineseText=@@@chineseTextGoesHere\#\#\#
-accessDeniedMessage=@@@You are not allowed to access this page.\#\#\#
-title=@@@Mifos\#\#\#
-typeMismatch.percentage=@@@That is not a number\!\#\#\#
-welcomeToMifos=@@@Welcome to Mifos\#\#\#
-firstName=@@@First name\#\#\#
-clientsAndAccounts.title=@@@Clients & Accounts\#\#\#
-buildId=@@@Build ID\#\#\#
-toQuicklyFindAClientYouCan=@@@To quickly find a client you can...\#\#\#
-manageAccounts=@@@Manage Accounts\#\#\#
-dateOfBirth=@@@Date of birth\#\#\#
-searchByName=@@@Search by name\:\#\#\#
-search=@@@Search\#\#\#
-yourSettings=@@@Your settings\#\#\#
-administrativeTasks=@@@Administrative Tasks\#\#\#
-createNewGroup=@@@Create new Group\#\#\#
-frenchText=@@@frenchTextGoesHere\#\#\#
-Products=@@@Products\#\#\#
+Price=@@@Price\#\#\#
+loanProduct=@@@Loan Product\#\#\#
+loanDetails=@@@Loan Details\#\#\#
+required=@@@Entry required.\#\#\#
+user.create.title=@@@Create New User\#\#\#
 error.not-specified=@@@Percentage not specified\!\#\#\#
+searchByName=@@@Search by name\:\#\#\#
+systemInformation=@@@System Information\#\#\#
+administrativeTasks=@@@Administrative Tasks\#\#\#
+user.create.heading=@@@Create a new user\#\#\#
+title=@@@Mifos\#\#\#
+createNewGroup=@@@Create new Group\#\#\#
+create=@@@Create\#\#\#
+client=@@@Client\#\#\#
+loanAmount=@@@Loan Amount\#\#\#
+clientsAndAccounts.title=@@@Clients & Accounts\#\#\#
+loanProduct.create.success.heading=@@@Loan product "{0}" was successfully defined.\#\#\#
+deleteLoanProduct.couldNotDelete=@@@Could not delete loan product\#\#\#
+arabicText=@@@arabicTextGoesHere\#\#\#
+interestRate=@@@Interest rate\#\#\#
+buildId=@@@Build ID\#\#\#
+UserName=@@@UserName\#\#\#
+welcomeToMifos=@@@Welcome to Mifos\#\#\#
+search=@@@Search\#\#\#
+firstName=@@@First name\#\#\#
+loanProducts.view.noneDefined=@@@No loan products have been defined.\#\#\#
+loanProduct.shortName.description=@@@Short name\#\#\#
+loanProductStatus.ACTIVE=@@@Active\#\#\#
+manageClients=@@@Manage Clients\#\#\#
+createNewClient=@@@Create new Client\#\#\#
+svnRevision=@@@SVN revision number\#\#\#
+amount=@@@Amount\#\#\#
+disbursalDate=@@@Disbursal Date\#\#\#
+tab.Reports=@@@Reports\#\#\#
+toQuicklyFindAClientYouCan=@@@To quickly find a client you can...\#\#\#
+submit=@@@Submit\#\#\#
+loanProduct.maxInterestRate.description=@@@Maxmimum interest rate\#\#\#
+loanProduct.view.heading=@@@Details for loan product "{0}".\#\#\#
+loanProducts.view.heading=@@@Loan Products\#\#\#
+loanProduct.minInterestRate.description=@@@Minimum interest rate\#\#\#
+deleteLoanProduct.becauseLoansExist=@@@because there are loans that use this product.\#\#\#
+loanProduct.edit.success.heading=@@@Loan product "{0}" was successfully updated.\#\#\#
+accessDeniedMessage=@@@You are not allowed to access this page.\#\#\#
+user.password=@@@Password\#\#\#
+deleteLoanProduct.title=@@@Delete Loan Product\#\#\#
+Description=@@@Description\#\#\#
+disburseLoan=@@@Disburse Loan\#\#\#
+dateOfBirth=@@@Date of birth\#\#\#
+chineseText=@@@chineseTextGoesHere\#\#\#
+typeMismatch.percentage=@@@That is not a number\!\#\#\#
+logout=@@@Logout\#\#\#
+buildTag=@@@Build tag\#\#\#
+manageAccounts=@@@Manage Accounts\#\#\#
+loanProducts.view.tableHeading.shortName=@@@Short Name\#\#\#
+loanProducts.view.tableHeading.longName=@@@Long Name\#\#\#
+loanProduct.longName.description=@@@Long name\#\#\#
+loanProductStatus.INACTIVE=@@@Inactive\#\#\#
+loanProduct.status.description=@@@Status\#\#\#
+user.userId=@@@User id\#\#\#
+tab.Home=@@@Home\#\#\#
+tab.Admin=@@@Admin\#\#\#
+frenchText=@@@frenchTextGoesHere\#\#\#
+user.confirmPassword=@@@Confirm password\#\#\#
+loanProduct.create.heading=@@@Create a new loan product\#\#\#
+accessDeniedTitle=@@@Access Denied\#\#\#
+createANewLoan=@@@Create a new loan\#\#\#
+openNewLoanAccount=@@@Open new Loan Account\#\#\#
+greeting=@@@Greetings, it is now\#\#\#
+tab.ClientsAndAccounts=@@@Clients & Accounts\#\#\#
+deleteLoanProduct.successfullyDeleted=@@@Successfully deleted loan product\#\#\#
+ID=@@@ID\#\#\#
+delete=@@@Delete\#\#\#
+hindiText=@@@hindiTextGoesHere\#\#\#
+createClient.title=@@@Create Client\#\#\#
+quickStart=@@@Quick Start\#\#\#
+deleteLoanProduct.areYouSure=@@@Are you sure you want to delete loan product\#\#\#
+lastName=@@@Last name\#\#\#
+cancel=@@@Cancel\#\#\#
+accessDeniedHeading=@@@Access Denied\#\#\#
+yourSettings=@@@Your settings\#\#\#
+createClientSuccess.clientCreatedSuccessfully=@@@Client created successfully\!\#\#\#
+Products=@@@Products\#\#\#
