Added viewOffices.ftl and OfficeController with entry point from the Admin page. Nothing to show yet, but the page comes up. Internationalized the admin page.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13981 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -82,4 +82,19 @@ amount=Amount
 interestRate=Interest rate
 loanAmount=Loan Amount
 disburseLoan=Disburse Loan
-
+administrativeTasks=Administrative Tasks
+administrativeTasksWelcome=Welcome to the mifos administrative area. Click on a link below to begin.
+manageOrganization=Manage Organization
+users=Users
+viewUsers=View users
+defineNewUser=Define a new user
+offices=Offices
+viewOffices=View offices
+defineNewOffice=Define a new office
+systemInformation=System Information
+viewSystemInformation=View System Information
+manageProducts=Manage Products
+manageLoanProducts=Manage Loan Products
+viewLoanProducts=View loan products
+defineLoanProduct=Define a new loan product
+noOfficesDefined=No offices have been defined
