--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,27 +1,33 @@
 #---Auto Generated Properties---
-#Fri Oct 17 17:20:21 PDT 2008
+#Mon Oct 20 17:47:24 PDT 2008
 loanProduct.edit.heading=@@@Update loan product "{0}"\#\#\#
 typeMismatch=@@@Invalid data.\#\#\#
 Price=@@@Price\#\#\#
 loanProduct=@@@Loan Product\#\#\#
 loanDetails=@@@Loan Details\#\#\#
+defineNewUser=@@@Define a new user\#\#\#
 required=@@@Entry required.\#\#\#
 user.create.title=@@@Create New User\#\#\#
 error.not-specified=@@@Percentage not specified\!\#\#\#
 searchByName=@@@Search by name\:\#\#\#
 systemInformation=@@@System Information\#\#\#
+defineLoanProduct=@@@Define a new loan product\#\#\#
+manageLoanProducts=@@@Manage Loan Products\#\#\#
 administrativeTasks=@@@Administrative Tasks\#\#\#
+viewLoanProducts=@@@View loan products\#\#\#
 user.create.heading=@@@Create a new user\#\#\#
 title=@@@Mifos\#\#\#
 createNewGroup=@@@Create new Group\#\#\#
 create=@@@Create\#\#\#
 client=@@@Client\#\#\#
 loanAmount=@@@Loan Amount\#\#\#
+viewOffices=@@@View offices\#\#\#
 clientsAndAccounts.title=@@@Clients & Accounts\#\#\#
 loanProduct.create.success.heading=@@@Loan product "{0}" was successfully defined.\#\#\#
 deleteLoanProduct.couldNotDelete=@@@Could not delete loan product\#\#\#
 arabicText=@@@arabicTextGoesHere\#\#\#
 interestRate=@@@Interest rate\#\#\#
+manageProducts=@@@Manage Products\#\#\#
 buildId=@@@Build ID\#\#\#
 UserName=@@@UserName\#\#\#
 welcomeToMifos=@@@Welcome to Mifos\#\#\#
@@ -41,6 +47,7 @@ submit=@@@Submit\#\#\#
 loanProduct.maxInterestRate.description=@@@Maxmimum interest rate\#\#\#
 loanProduct.view.heading=@@@Details for loan product "{0}".\#\#\#
 loanProducts.view.heading=@@@Loan Products\#\#\#
+viewSystemInformation=@@@View System Information\#\#\#
 loanProduct.minInterestRate.description=@@@Minimum interest rate\#\#\#
 deleteLoanProduct.becauseLoansExist=@@@because there are loans that use this product.\#\#\#
 loanProduct.edit.success.heading=@@@Loan product "{0}" was successfully updated.\#\#\#
@@ -48,12 +55,16 @@ accessDeniedMessage=@@@You are not allowed to access this page.\#\#\#
 user.password=@@@Password\#\#\#
 deleteLoanProduct.title=@@@Delete Loan Product\#\#\#
 Description=@@@Description\#\#\#
+offices=@@@Offices\#\#\#
 disburseLoan=@@@Disburse Loan\#\#\#
 dateOfBirth=@@@Date of birth\#\#\#
 chineseText=@@@chineseTextGoesHere\#\#\#
 typeMismatch.percentage=@@@That is not a number\!\#\#\#
+viewUsers=@@@View users\#\#\#
 logout=@@@Logout\#\#\#
 buildTag=@@@Build tag\#\#\#
+noOfficesDefined=@@@No offices have been defined\#\#\#
+manageOrganization=@@@Manage Organization\#\#\#
 manageAccounts=@@@Manage Accounts\#\#\#
 loanProducts.view.tableHeading.shortName=@@@Short Name\#\#\#
 loanProducts.view.tableHeading.longName=@@@Long Name\#\#\#
@@ -61,9 +72,11 @@ loanProduct.longName.description=@@@Long name\#\#\#
 loanProductStatus.INACTIVE=@@@Inactive\#\#\#
 loanProduct.status.description=@@@Status\#\#\#
 user.userId=@@@User id\#\#\#
+defineNewOffice=@@@Define a new office\#\#\#
 tab.Home=@@@Home\#\#\#
 tab.Admin=@@@Admin\#\#\#
 frenchText=@@@frenchTextGoesHere\#\#\#
+users=@@@Users\#\#\#
 user.confirmPassword=@@@Confirm password\#\#\#
 loanProduct.create.heading=@@@Create a new loan product\#\#\#
 accessDeniedTitle=@@@Access Denied\#\#\#
@@ -79,6 +92,7 @@ createClient.title=@@@Create Client\#\#\#
 quickStart=@@@Quick Start\#\#\#
 deleteLoanProduct.areYouSure=@@@Are you sure you want to delete loan product\#\#\#
 lastName=@@@Last name\#\#\#
+administrativeTasksWelcome=@@@Welcome to the mifos administrative area. Click on a link below to begin.\#\#\#
 cancel=@@@Cancel\#\#\#
 accessDeniedHeading=@@@Access Denied\#\#\#
 yourSettings=@@@Your settings\#\#\#
