Finished login page i18n. Hooked up default offices acceptance tests to real UI for viewOffices.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13985 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -98,3 +98,4 @@ manageLoanProducts=Manage Loan Products
 viewLoanProducts=View loan products
 defineLoanProduct=Define a new loan product
 noOfficesDefined=No offices have been defined
+login=Login
