--- a/application/src/main/resources/messages_is.properties
+++ b/application/src/main/resources/messages_is.properties
@@ -1,5 +1,5 @@
 #---Auto Generated Properties---
-#Mon Oct 20 17:47:24 PDT 2008
+#Tue Oct 21 09:49:44 PDT 2008
 loanProduct.edit.heading=@@@Update loan product "{0}"\#\#\#
 typeMismatch=@@@Invalid data.\#\#\#
 Price=@@@Price\#\#\#
@@ -80,6 +80,7 @@ users=@@@Users\#\#\#
 user.confirmPassword=@@@Confirm password\#\#\#
 loanProduct.create.heading=@@@Create a new loan product\#\#\#
 accessDeniedTitle=@@@Access Denied\#\#\#
+login=@@@Login\#\#\#
 createANewLoan=@@@Create a new loan\#\#\#
 openNewLoanAccount=@@@Open new Loan Account\#\#\#
 greeting=@@@Greetings, it is now\#\#\#
