cleanup of acceptance tests - moved asserts to Page object verify methods
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13987 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -39,6 +39,7 @@ createNewClient=Create new Client
 manageAccounts=Manage Accounts
 openNewLoanAccount=Open new Loan Account
 administrativeTasks=Administrative Tasks
+createClientSuccess.title=Create Client success
 createClientSuccess.clientCreatedSuccessfully=Client created successfully!
 yourSettings=Your settings
 logout=Logout
@@ -50,9 +51,11 @@ create=Create
 disbursalDate=Disbursal Date
 deleteLoanProduct.title=Delete Loan Product
 deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
-deleteLoanProduct.couldNotDelete=Could not delete loan product
-deleteLoanProduct.becauseLoansExist=because there are loans that use this product.
-deleteLoanProduct.successfullyDeleted=Successfully deleted loan product
+deleteLoanProductSuccess.title=Delete Loan Product success
+deleteLoanProductSuccess.successfullyDeleted=Successfully deleted loan product
+deleteLoanProductFailure.title=Delete Loan Product failure
+deleteLoanProductFailure.couldNotDelete=Could not delete loan product
+deleteLoanProductFailure.becauseLoansExist=because there are loans that use this product.
 delete=Delete
 cancel=Cancel
 loanProducts.view.heading=Loan Products
