--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -69,7 +69,7 @@ loanProduct.create.heading=Create a new loan product
 loanProduct.create.success.heading=Loan product "{0}" was successfully defined.
 loanProduct.longName.description=Long name
 loanProduct.shortName.description=Short name
-loanProduct.maxInterestRate.description=Maxmimum interest rate
+loanProduct.maxInterestRate.description=Maximum interest rate
 loanProduct.minInterestRate.description=Minimum interest rate
 loanProduct.status.description=Status
 user.create.title=Create New User
@@ -77,6 +77,8 @@ user.create.heading=Create a new user
 user.userId=User id
 user.password=Password
 user.confirmPassword=Confirm password
+user.create.success.heading=User "{0}" was successfully defined.
+user.create.success.title=Define User Success
 createANewLoan=Create a new loan
 loanDetails=Loan Details
 client=Client
