moved sql script execution to from integration test phase to pre-integration-test phase; removed create table sql scripts; added ping.ftl page (does not hit database, though); added tests for ping and appInfo; initial add of UserCanViewListOfGroupsStoryTest
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14012 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -43,42 +43,13 @@ createClientSuccess.title=Create Client success
 createClientSuccess.clientCreatedSuccessfully=Client created successfully!
 yourSettings=Your settings
 logout=Logout
+toViewAListOfGroups=To view a list of groups:
 toQuicklyFindAClientYouCan=To quickly find a client you can...
 searchByName=Search by name:
 search=Search
 submit=Submit
 create=Create
 disbursalDate=Disbursal Date
-deleteLoanProduct.title=Delete Loan Product
-deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
-deleteLoanProductSuccess.title=Delete Loan Product success
-deleteLoanProductSuccess.successfullyDeleted=Successfully deleted loan product
-deleteLoanProductFailure.title=Delete Loan Product failure
-deleteLoanProductFailure.couldNotDelete=Could not delete loan product
-deleteLoanProductFailure.becauseLoansExist=because there are loans that use this product.
-delete=Delete
-cancel=Cancel
-loanProducts.view.heading=Loan Products
-loanProducts.view.noneDefined=No loan products have been defined.
-loanProducts.view.tableHeading.shortName=Short Name
-loanProducts.view.tableHeading.longName=Long Name
-loanProduct.view.heading=Details for loan product "{0}".
-loanProduct.edit.heading=Update loan product "{0}"
-loanProduct.edit.success.heading=Loan product "{0}" was successfully updated.
-loanProduct.create.heading=Create a new loan product
-loanProduct.create.success.heading=Loan product "{0}" was successfully defined.
-loanProduct.longName.description=Long name
-loanProduct.shortName.description=Short name
-loanProduct.maxInterestRate.description=Maximum interest rate
-loanProduct.minInterestRate.description=Minimum interest rate
-loanProduct.status.description=Status
-user.create.title=Create New User
-user.create.heading=Create a new user
-user.userId=User id
-user.password=Password
-user.confirmPassword=Confirm password
-user.create.success.heading=User "{0}" was successfully defined.
-user.create.success.title=Define User Success
 createANewLoan=Create a new loan
 loanDetails=Loan Details
 client=Client
@@ -104,3 +75,35 @@ viewLoanProducts=View loan products
 defineLoanProduct=Define a new loan product
 noOfficesDefined=No offices have been defined
 login=Login
+delete=Delete
+cancel=Cancel
+
+deleteLoanProduct.title=Delete Loan Product
+deleteLoanProduct.areYouSure=Are you sure you want to delete loan product
+deleteLoanProductSuccess.title=Delete Loan Product success
+deleteLoanProductSuccess.successfullyDeleted=Successfully deleted loan product
+deleteLoanProductFailure.title=Delete Loan Product failure
+deleteLoanProductFailure.couldNotDelete=Could not delete loan product
+deleteLoanProductFailure.becauseLoansExist=because there are loans that use this product.
+loanProducts.view.heading=Loan Products
+loanProducts.view.noneDefined=No loan products have been defined.
+loanProducts.view.tableHeading.shortName=Short Name
+loanProducts.view.tableHeading.longName=Long Name
+loanProduct.view.heading=Details for loan product "{0}".
+loanProduct.edit.heading=Update loan product "{0}"
+loanProduct.edit.success.heading=Loan product "{0}" was successfully updated.
+loanProduct.create.heading=Create a new loan product
+loanProduct.create.success.heading=Loan product "{0}" was successfully defined.
+loanProduct.longName.description=Long name
+loanProduct.shortName.description=Short name
+loanProduct.maxInterestRate.description=Maximum interest rate
+loanProduct.minInterestRate.description=Minimum interest rate
+loanProduct.status.description=Status
+user.create.title=Create New User
+user.create.heading=Create a new user
+user.userId=User id
+user.password=Password
+user.confirmPassword=Confirm password
+user.create.success.heading=User "{0}" was successfully defined.
+user.create.success.title=Define User Success
+groups.view.heading=View a list of groups
