--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
-
 Description=Description
 ID=ID
 Price=Price
@@ -107,3 +106,4 @@ viewSystemInformation=View System Information
 viewUsers=View users
 welcomeToMifos=Welcome to Mifos
 yourSettings=Your settings
+viewGroups.title=View Groups
