Additions to Story 662 - Admin user can create a new user 1. Corrected acceptance tests and added them to the acceptance test suites 2. Enabled the admin user to assign security roles to the new user 3. Removed unused code from DatabaseTestUtils
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14031 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -98,6 +98,7 @@ user.create.success.heading=User "{0}" was successfully defined.
 user.create.success.title=Define User Success
 user.create.title=Create New User
 user.password=Password
+user.roles.description=Security roles
 user.userId=User id
 users=Users
 viewLoanProducts=View loan products
