--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -48,7 +48,7 @@ interestRate=Interest rate
 lastName=Last name
 loanAmount=Loan Amount
 loanDetails=Loan Details
-loanProduct.create.heading=Create a new loan product
+loanProduct.create.heading=Create a New Loan Product
 loanProduct.create.success.heading=Loan product "{0}" was successfully defined.
 loanProduct.edit.heading=Update loan product "{0}"
 loanProduct.edit.success.heading=Loan product "{0}" was successfully updated.
@@ -57,7 +57,7 @@ loanProduct.maxInterestRate.description=Maximum interest rate
 loanProduct.minInterestRate.description=Minimum interest rate
 loanProduct.shortName.description=Short name
 loanProduct.status.description=Status
-loanProduct.view.heading=Details for loan product "{0}".
+loanProduct.view.heading=Details for Loan Product "{0}".
 loanProduct=Loan Product
 loanProductStatus.ACTIVE=Active
 loanProductStatus.INACTIVE=Inactive
@@ -79,6 +79,10 @@ quickStart=Quick Start
 required=Entry required.
 search=Search
 searchByName=Search by name:
+security.role.ROLE_ADMIN=Mifos administrator
+security.role.ROLE_USER=Mifos user
+security.role.ROLE_ANONYMOUS=Anonymous
+security.role.ROLE_GUEST=Mifos guest user
 submit=Submit
 svnRevision=SVN revision number
 systemInformation=System Information
@@ -93,7 +97,7 @@ toViewAListOfGroups=To view a list of groups:
 typeMismatch.percentage=That is not a number!
 typeMismatch=Invalid data.
 user.confirmPassword=Confirm password
-user.create.heading=Create a new user
+user.create.heading=Create a New User
 user.create.success.heading=User "{0}" was successfully defined.
 user.create.success.title=Define User Success
 user.create.title=Create New User
@@ -101,7 +105,7 @@ user.password=Password
 user.roles.description=Security roles
 user.userId=User id
 users=Users
-viewLoanProducts=View loan products
+viewLoanProducts=View Loan Products
 viewOffices=View offices
 viewSystemInformation=View System Information
 viewUsers=View users
