Progress defining new collection sheet entry user interface, controllers, DTOs, and form beans.
Currently the collection sheet function is broken in the following way:
* Click on Clients & Accounts tab.
* In the left pane, click on "Enter Collection Sheet Data".
* Results in this exception:

org.springframework.web.util.NestedServletException: Request processing failed; nested exception is org.springframework.context.ApplicationContextException: Could not load FreeMarker template for URL [collectionSheetEntrySelectCenter.ftl]; nested exception is java.io.FileNotFoundException: Template collectionSheetEntrySelectCenter.ftl not found.


git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14244 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/userInterface/src/main/resources/org/mifos/ui/localizedProperties/messages.properties
+++ b/userInterface/src/main/resources/org/mifos/ui/localizedProperties/messages.properties
@@ -17,6 +17,11 @@ cancel=Cancel
 chineseText=chineseTextGoesHere
 client=Client
 clientsAndAccounts.title=Clients & Accounts
+collectionSheetEntry.select.title=Collection Sheet Entry - Select Center
+collectionSheetEntry.select.form.label.branchOffice=Branch office
+collectionSheetEntry.select.form.label.loanOfficer=Loan officer
+collectionSheetEntry.select.form.label.center=Center
+collectionSheetEntry.select.form.label.paymentMode=Payment mode
 create=Create
 createANewLoan=Create a new loan
 createClient.title=Create Client
